--- a/product-list/build.gradle
+++ b/product-list/build.gradle
@@ -18,7 +18,10 @@ dependencies {
     implementation 'io.quarkus:quarkus-grpc'
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-resteasy'
-    compile 'io.quarkus:quarkus-resteasy-jsonb'
+    compile (
+            'io.quarkus:quarkus-resteasy-jsonb',
+            'io.quarkus:quarkus-smallrye-openapi',
+    )
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
