--- a/product-list/build.gradle
+++ b/product-list/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile (
             'io.quarkus:quarkus-resteasy-jsonb',
             'io.quarkus:quarkus-smallrye-openapi',
+            'io.quarkus:quarkus-smallrye-health',
     )
 
     testImplementation 'io.quarkus:quarkus-junit5'
