Fix tests and properties

--- a/product-list/build.gradle
+++ b/product-list/build.gradle
@@ -24,6 +24,7 @@ dependencies {
             'io.quarkus:quarkus-smallrye-health',
             'io.quarkus:quarkus-smallrye-opentracing',
             'io.quarkus:quarkus-smallrye-metrics',
+            'io.quarkus:quarkus-smallrye-fault-tolerance',
     )
 
     testImplementation 'io.quarkus:quarkus-junit5'
