--- a/product-list/src/main/resources/application.properties
+++ b/product-list/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-quarkus.resteasy.gzip.enabled=true
-quarkus.resteasy.gzip.max-input=10M
 quarkus.grpc.server.port=9000
 quarkus.jaeger.service-name=product-list
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n 
+
+quarkus.grpc.clients.discount-calculator.host=localhost
+quarkus.grpc.clients.discount-calculator.port=8484
