--- a/product-list/.gitignore
+++ b/product-list/.gitignore
@@ -28,6 +28,9 @@ nb-configuration.xml
 *.orig
 *.rej
 
-# Gradle
-.gradle/
-build/
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
