--- a/product-list/src/main/docker/Dockerfile.native
+++ b/product-list/src/main/docker/Dockerfile.native
@@ -1,7 +1,7 @@
 ####
 # This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode
 #
-# Before building the docker image run:
+# Before building the container image run:
 #
 # mvn package -Pnative -Dquarkus.native.container-build=true
 #
@@ -19,7 +19,7 @@ WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
-COPY --chown=1001:root build/*-runner /work/application
+COPY --chown=1001:root target/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
