Add Dockerfile Include commands into Makefile Add user service into docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,17 @@ services:
     volumes:
       - ./products/infra:/docker-entrypoint-initdb.d/
       - db_products:/var/lib/postgresql/data
+  users-service:
+    container_name: users-service
+    build:
+      context: ./users
+      dockerfile: Dockerfile
+    ports:
+      - 8485:50001
+    env_file:
+      - ./users/.env
+    depends_on:
+      - user-db
 
 volumes:
   db_user:
