--- a/products/.env
+++ b/products/.env
@@ -1,6 +1,6 @@
 DB_DRIVER=postgres
-DB_HOST=localhost
+DB_HOST=product-db
 DB_USER=postgres 
 DB_NAME=products
-DB_PORT=5433
+DB_PORT=5432
 DB_PASSWORD=hash
