Remove mocks Connect to service discount by GRPC Prepare to deploy in a docker container using fastjar Configure enviroments

--- a/product-list/src/main/resources/application.properties
+++ b/product-list/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-quarkus.grpc.server.port=9000
 quarkus.jaeger.service-name=product-list
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
-quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n 
-
-quarkus.grpc.clients.discount-calculator.host=localhost
-quarkus.grpc.clients.discount-calculator.port=8484
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+# GRPC Clients
+#quarkus.grpc.server.port=9000
+quarkus.log.level=ERROR
+quarkus.grpc.clients.discountcalculator.host=127.0.0.1
+quarkus.grpc.clients.discountcalculator.port=8487
+quarkus.grpc.clients.products.host=127.0.0.1
+quarkus.grpc.clients.products.port=8486
+#quarkus.debug.reflection=true
+quarkus.package.type=fast-jar
+quarkus.swagger-ui.always-include=true
