--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     build:
       context: ./users
       dockerfile: Dockerfile
-    image: user-service:0.0.1
+    image: user-service:latest
     ports:
       - 8485:50001
     env_file:
@@ -37,7 +37,7 @@ services:
     build:
       context: ./products
       dockerfile: Dockerfile
-    image: product-service:0.0.1
+    image: product-service:latest
     ports:
       - 8486:50001
     env_file:
@@ -49,7 +49,7 @@ services:
     build:
       context: ./discountcalculator
       dockerfile: Dockerfile
-    image: discount-calculator-service:0.0.1
+    image: discount-calculator-service:latest
     ports:
       - 8487:50001
     env_file:
@@ -57,6 +57,19 @@ services:
     depends_on:
       - product-service
       - user-service
+  web-api:
+    container_name: web-api
+    build:
+      context: ./product-list
+      dockerfile: Dockerfile.fast-jar
+    image: web-api:latest
+    ports:
+      - 8488:8080
+    env_file:
+      - ./product-list/web-api.env
+    depends_on:
+      - product-service
+      - discount-calculator-service  
 
 volumes:
   db_user:
