--- a/product-list/src/main/resources/application.properties
+++ b/product-list/src/main/resources/application.properties
@@ -12,3 +12,4 @@ quarkus.grpc.clients.products.port=8486
 #quarkus.debug.reflection=true
 quarkus.package.type=fast-jar
 quarkus.swagger-ui.always-include=true
+quarkus.http.port=8081
