--- a/product-list/web-api.env
+++ b/product-list/web-api.env
@@ -1,5 +1,13 @@
 QUARKUS_GRPC_SERVER_ENABLE-REFLECTION_SERVICE=true
-QUARKUS_GRPC_CLIENTS_DISCOUNTCALCULATOR_HOST=user-service
+QUARKUS_GRPC_CLIENTS_DISCOUNTCALCULATOR_HOST=discount-calculator-service
 QUARKUS_GRPC_CLIENTS_DISCOUNTCALCULATOR_PORT=50001
 QUARKUS_GRPC_CLIENTS_PRODUCTS_HOST=product-service
 QUARKUS_GRPC_CLIENTS_PRODUCTS_PORT=50001
+QUARKUS_LOG_LEVEL=DEBUG
+
+#QUARKUS_LOG_CONSOLE_FORMAT=%d{HH:mm:ss} %-5p traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+QUARKUS_DEBUG_REFLECTION=true
+QUARKUS_HTTP_PORT=8080
+
+#CACHE
+QUARKUS_CACHE_CAFFEINE_"products"_EXPIRE-AFTER-WRITE=60S
