Propagate exceptions to avoid unexpected close app Change config cache

--- a/product-list/src/main/resources/application.properties
+++ b/product-list/src/main/resources/application.properties
@@ -13,3 +13,8 @@ quarkus.grpc.clients.products.port=8486
 quarkus.package.type=fast-jar
 quarkus.swagger-ui.always-include=true
 quarkus.http.port=8081
+
+# Capacidade inicial
+quarkus.cache.caffeine."product-cache".initial-capacity=20
+quarkus.cache.caffeine."product-cache".maximum-size=20
+quarkus.cache.caffeine."product-cache".expire-after-write=60S
