Add doc Add and change commands on Makefiles

--- a/discountcalculator/Makefile
+++ b/discountcalculator/Makefile
@@ -18,7 +18,7 @@ build-api:
 	go build -o ./bin/grpc-discount-calulator api/grpc/main.go
 
 linux-binaries:
-	CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags "-static"' -o $(BIN_DIR)/grpc-discount-calulator-linux api/grpc/main.go
+	CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags "-static"' -o ./bin/grpc-discount-calulator-linux api/grpc/main.go
 
 fmt: ## gofmt and goimports all go files
 	find . -name '*.go' -not -wholename './vendor/*' | while read -r file; do gofmt -w -s "$$file"; goimports -w "$$file"; done
